# api/routers/human_resources_management/user/user.route.go
@@ -26,9 +26,9 @@ func UserRouter(env *bootstrap.Database, timeout time.Duration, db *mongo.Databa
 	router.POST("/signup", user.SignUp)
 	router.PATCH("/update", middlewares.DeserializeUser(), user.UpdateUser)
 	router.PATCH("/verify", user.VerificationCode)
-	//router.PATCH("/verify/password", user.VerificationCodeForChangePassword)
-	//router.PATCH("/password/forget", user.ChangePassword)
-	//router.POST("/forget", user.ForgetPasswordInUser)
+	router.PATCH("/verify/password", user.VerificationCodeForChangePassword)
+	router.PATCH("/password/forget", user.ChangePassword)
+	router.POST("/forget", user.ForgetPasswordInUser)
 	router.GET("/get/info", user.GetMe)
 	router.GET("/get/refresh", user.RefreshToken)
 	router.DELETE("/current/delete", middlewares.DeserializeUser(), user.DeleteCurrentUser)
